# note_evaluation

./: README.md  learning_advice_output.md  note.txt  note_complement_output.md  note_summary_output.md  pyproject.toml  requirements.txt
db/: chroma.sqlite3
src/note_eval2/: crew.py  learning_advice_output.md  main.py  note_complement_output.md  note_summary_output.md  output.md
src/note_eval2/config/: agents.yaml  tasks.yaml
